2004-02-29  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-sets.ads, aws-net-sets.adb:
	(Socket_Set_Type): Make finalization controlled.
	(Wait): Put socket error code to exception text on error.

	* aws-net.ads, aws-net.adb:
	(Errno): New private routine.

        * aws-net-std.ads:
        (Errno): New routine.

2004-02-28  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-sets.ads, aws-net-sets.adb, aws-net-sets-thin.ads:
	Waiting on group of sockets for input/output availability.

2004-02-11  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net.ads:
	(Read_Cache): New type instead of Cache.
	(Write_Cache): New type instead of Cache.

	* aws-net-buffered.adb:
	(Write): Simplified write cache algorithm.
	(Flush): Simplified write cache algorithm.
	(Shutdown): Ignore recent cache buffer send error.

	* aws-net-stream_io.adb:
	(Shutdown): Use Net.Buffered.Shutdown.

2004-02-08  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-smtp.ads:
	Minor reformatting.

	* aws-pop.adb:
	(CC): New procedure.
        (CC_Count): New procedure.

	* aws-pop.ads:
	(CC): New procedure.
        (CC_Count): New procedure.
        Update copyright notice.

2004-02-08  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-server-protocol_handler.adb:
	(Get_File_Data): Fix routine body header.

2004-02-07  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-net-buffered.adb:
	(Pop): Fix pragma inline.
        Update copyright notice.

	* aws-response-set.ads:
	(Cache_Control): Fix pragma inline.
        Update copyright notice.

	* templates_parser.adb:
	Update to version 7.1.
	Handle now tables having a single vector tag in an if condition.
	(Check): Optimize a little bit the code.

2004-02-06  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb:
	Integrates Jean-Pierre Rosen's patch to improve performances by
	 using a static buffer to cache result. This work around a slow
	 Unbounded_String implementation on GNAT 3.15. It still improves
	 the performance by 14% on GNAT 3.16.
